# embeddenator-cli

./: .copilot  .gitignore  .gitleaks.toml  CHANGELOG.md  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
src/commands/: bundle_hier.rs  ingest.rs  mod.rs  mount.rs  query.rs  update.rs
src/utils/: path.rs
tests/: update_commands.rs
