[package]
name = "embeddenator-cli"
version = "0.20.0-alpha.1"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "CLI interface for Embeddenator holographic computing substrate"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator"
homepage = "https://github.com/tzervas/embeddenator"
keywords = ["vsa", "holographic", "cli", "engram", "vector-symbolic"]
categories = ["command-line-utilities"]

[lib]
name = "embeddenator_cli"
path = "src/lib.rs"

[[bin]]
name = "embeddenator-cli"
path = "src/main.rs"

[dependencies]
# Component libraries (Phase 2A decomposition)
embeddenator-vsa = "0.20.0-alpha.1"
embeddenator-retrieval = "0.20.0-alpha.1"
embeddenator-fs = "0.20.0-alpha.1"
embeddenator-io = "0.20.0-alpha.1"

# CLI and error handling
clap = { version = "4.5", features = ["derive"] }
anyhow = "1.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "3.0"

# Utilities
walkdir = "2.5"

[features]
default = []
fuse = ["embeddenator-fs/default"]  # FUSE support from fs component
