[package]
name = "embeddenator-cli"
version = "0.21.0"
edition = "2021"
authors = ["Tyler Zervas <tz-dev@vectorweight.com>"]
description = "CLI interface for Embeddenator holographic computing substrate"
license = "MIT"
repository = "https://github.com/tzervas/embeddenator"
homepage = "https://github.com/tzervas/embeddenator"
documentation = "https://docs.rs/embeddenator-cli"
keywords = ["vsa", "holographic", "cli", "engram", "vector-symbolic"]
categories = ["command-line-utilities"]

[lib]
name = "embeddenator_cli"
path = "src/lib.rs"

[[bin]]
name = "embeddenator-cli"
path = "src/main.rs"

[dependencies]
# Component libraries (path for dev, semver for crates.io)
embeddenator-vsa = { path = "../embeddenator-vsa", version = ">=0.21.0, <1.0.0" }
embeddenator-retrieval = { path = "../embeddenator-retrieval", version = ">=0.21.0, <1.0.0" }
embeddenator-fs = { path = "../embeddenator-fs", version = ">=0.23.0, <1.0.0" }
embeddenator-io = { path = "../embeddenator-io", version = ">=0.21.0, <1.0.0" }

# CLI and error handling
clap = { version = ">=4.5, <5.0", features = ["derive"] }
anyhow = ">=1.0, <2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "3.0"

# Utilities
walkdir = ">=2.5, <3.0"

[features]
default = []
fuse = ["embeddenator-fs/fuse"]  # FUSE support from fs component
